[gd_scene load_steps=13 format=3 uid="uid://c5o5g6bdpmpv"]

[ext_resource type="Script" uid="uid://04276abxrnwe" path="res://ConcertLevel.gd" id="1_concert"]
[ext_resource type="Texture2D" uid="uid://d0klc4p5sel5v" path="res://concertpage.png" id="2_bg"]
[ext_resource type="Script" uid="uid://d4edls611mot3" path="res://Performer.gd" id="3_performer"]
[ext_resource type="Texture2D" uid="uid://dplbgcwef2ewe" path="res://sprites.png" id="4_sprites"]
[ext_resource type="PackedScene" uid="uid://ciqxy83lbn7v" path="res://player.tscn" id="5_player"]
[ext_resource type="AudioStream" uid="uid://cklgu4wowr06o" path="res://Bottle of Rum.mp3" id="6_music"]

[sub_resource type="GDScript" id="GDScript_cam"]
script/source = "extends Camera2D

func _ready() -> void:
	limit_left = 0
	limit_top = 0
	limit_right = 1536
	limit_bottom = 1024
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exit"]
size = Vector2(80, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stage"]
size = Vector2(1200, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_left"]
size = Vector2(40, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_right"]
size = Vector2(40, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bottom"]
size = Vector2(1536, 40)

[node name="ConcertLevel" type="Node2D"]
script = ExtResource("1_concert")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(768, 512)
texture = ExtResource("2_bg")

[node name="Performer" type="Sprite2D" parent="."]
position = Vector2(698.99994, 385)
scale = Vector2(0.4853374, 0.4791667)
texture = ExtResource("4_sprites")
hframes = 3
vframes = 4
frame = 3
script = ExtResource("3_performer")

[node name="Player" parent="." instance=ExtResource("5_player")]
position = Vector2(200, 850)

[node name="Camera2D" type="Camera2D" parent="Player"]
script = SubResource("GDScript_cam")

[node name="ExitZone" type="Area2D" parent="."]
position = Vector2(1380, 350)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitZone"]
shape = SubResource("RectangleShape2D_exit")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="StageBarrier" type="CollisionShape2D" parent="Walls"]
position = Vector2(768, 320)
shape = SubResource("RectangleShape2D_stage")

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(20, 550)
shape = SubResource("RectangleShape2D_left")

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(1516, 550)
shape = SubResource("RectangleShape2D_right")

[node name="BottomWall" type="CollisionShape2D" parent="Walls"]
position = Vector2(768, 1004)
shape = SubResource("RectangleShape2D_bottom")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_music")
volume_db = -15.58
autoplay = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="StateLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "DANCE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CaughtOverlay" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 1)
